Migrate to net2.2

--- a/PurchasesRegistry/PurchasesRegistry/Views/Shared/_LoginPartial.cshtml
+++ b/PurchasesRegistry/PurchasesRegistry/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
 @using Microsoft.AspNetCore.Identity
+@using PurchasesRegistry.DAL.Models;
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<PurchaseIdentityUser> SignInManager
+@inject UserManager<PurchaseIdentityUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
