--- a/PurchasesRegistry/PurchasesRegistry/Views/Home/Index.cshtml
+++ b/PurchasesRegistry/PurchasesRegistry/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model PurchaseListViewModel
+﻿@using PagedList.Core.Mvc
+
+@model PurchaseListViewModel
 
 @{
 	ViewData["Title"] = "Заказы";
@@ -7,25 +9,36 @@
 <div id="purchaseList">
 	@if (Model.Purchases.Any())
 	{
-	<table class="table">
-		<thead>
-			<tr>
-				<th scope="col">№</th>
-				<th scope="col">Наименование заказа</th>
-				<th scope="col">Дата создания</th>
-			</tr>
-		</thead>
-		<tbody>
-			@foreach (var item in Model.Purchases)
-			{
-			<tr>
-				<th scope="row">@item.Id</th>
-				<td>@item.Name</td>
-				<td>@item.CreationDate.ToShortDateString()</td>
-			</tr>
-			}
-		</tbody>
-	</table>
+		<table class="table">
+			<thead>
+				<tr>
+					<th scope="col">№</th>
+					<th scope="col">Наименование заказа</th>
+					<th scope="col">Дата создания</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var item in Model.Purchases)
+				{
+					<tr>
+						<th scope="row">@item.Id</th>
+						<td>@item.Name</td>
+						<td>@item.CreationDate.ToShortDateString()</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+		var paramsDict = new Dictionary<string, string>()
+		{
+			{"pageNumber", Model.Purchases.PageNumber.ToString() },
+			{"pageSize", Model.Purchases.PageSize.ToString() },
+		};
+		<pager class="pager-container"
+		list="@Model.Purchases"
+		options="@PagedListRenderOptions.Classic"
+		asp-action="Index"
+		asp-all-route-data="@paramsDict"
+		asp-controller="Home" />
 	}
 	else
 	{
