--- a/PurchasesRegistry/PurchasesRegistry/Views/Shared/_Layout.cshtml
+++ b/PurchasesRegistry/PurchasesRegistry/Views/Shared/_Layout.cshtml
@@ -38,6 +38,8 @@
     </nav>
 
     <div class="container body-content">
+		<br />
+		<h2>@ViewData["Title"]</h2>
         @RenderBody()
         <hr />
         <footer>
