--- a/PurchasesRegistry/PurchasesRegistry/Views/Shared/_Layout.cshtml
+++ b/PurchasesRegistry/PurchasesRegistry/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-route="Home/Index/10/10">К заказам</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">К заказам</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
