--- a/PurchasesRegistry/PurchasesRegistry/Views/Shared/_LoginPartial.cshtml
+++ b/PurchasesRegistry/PurchasesRegistry/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 @using PurchasesRegistry.DAL.Models;
 
 @inject SignInManager<PurchaseIdentityUser> SignInManager
@@ -9,10 +9,10 @@
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">[@UserManager.GetUserName(User)]</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Выход</button>
             </li>
         </ul>
     </form>
